update treemap translation, fix up language switch

--- a/src/custom-style.css
+++ b/src/custom-style.css
@@ -16,3 +16,11 @@
 #title_actors {
   text-transform: uppercase;
 }
+
+#title_topics {
+  text-transform: uppercase;
+}
+
+#languageSwitcher {
+  text-transform: uppercase;
+}
