--- a/src/custom-style.css
+++ b/src/custom-style.css
@@ -24,3 +24,36 @@
 #languageSwitcher {
   text-transform: uppercase;
 }
+
+#smallnote {
+  font-size: 12px;
+}
+
+.tooltip-container {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip-text {
+  visibility: hidden;
+  width: 300px;
+  background-color: #333;
+  color: #fff;
+  text-align: left;
+  border-radius: 6px;
+  padding: 8px;
+  position: absolute;
+  z-index: 1000;
+  top: 100%; /* below the heading */
+  left: 0;
+  margin-top: 8px;
+  font-size: 12px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.tooltip-container:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
