--- a/src/custom-style.css
+++ b/src/custom-style.css
@@ -57,3 +57,10 @@
   visibility: visible;
   opacity: 1;
 }
+
+
+#dash_title {
+  font-size: 18px;
+  text-transform: uppercase;
+  line-height: 1.5;
+}
